--- a/index.html
+++ b/index.html
@@ -2,10 +2,41 @@
 <html lang="en">
     <head>
         <title>My, Webpage</title>
+        <style>
+            div {
+                background-color: aqua;
+                border-color: black;
+                border-collapse: collapse;
+            }
+            h3 {text-align: center;}
+            h1 {text-align: center;
+                font-family:Arail;
+                text-decoration-color: burlywood;
+            }
+        </style>
+        <style>
+            #foo {
+                background-color: burlywood;
+            }
+        </style>
     </head>
     <body>
-        <h3>NAME: NEEL</h3>
-        <h3>ROLL.NO.: 2001010005</h3>
-        <h3>course: B.tech(CSE)</h3>
+        <h1>
+            WElCOME, TO MY WEBPAGE
+        </h1>
+        <div>
+            <h3>Name: NEEL</h3>
+            <h3>ROLL. NO.: 2001010005</h3>
+            <h3>COURSE: B.tech(CSE)</h3>
+        </div>
+        <div id = foo>
+            <h2 style=color:red>*Discription:</h2>
+            My name is neel and i am from b.tech(cse). This page is reagarding 
+            my academic personal information.  
+        </div>
+        <img src="insta.jpg" alt="insta" width="150px">
+        <a href="https://instagram.com">click here</a>
+        <img src="git2.jpg" alt="git" width="150px">
+        <a href="https://github.com">click here</a>
     </body>
 </html>
