--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
         <img src="insta.jpg" alt="insta" width="150px">
         <a href="https://instagram.com">click here</a>
-        <img src="git2.jpg" alt="git" width="150px">
+        <img src="git2.png" alt="git" width="150px">
         <a href="https://github.com">click here</a>
     </body>
 </html>
