--- a/index.html
+++ b/index.html
@@ -1,42 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>My, Webpage</title>
-        <style>
-            div {
-                background-color: aqua;
-                border-color: black;
-                border-collapse: collapse;
-            }
-            h3 {text-align: center;}
-            h1 {text-align: center;
-                font-family:Arail;
-                text-decoration-color: burlywood;
-            }
-        </style>
-        <style>
-            #foo {
-                background-color: burlywood;
-            }
-        </style>
-    </head>
-    <body>
-        <h1>
-            WElCOME, TO MY WEBPAGE
-        </h1>
-        <div>
-            <h3>Name: NEEL</h3>
-            <h3>ROLL. NO.: 2001010005</h3>
-            <h3>COURSE: B.tech(CSE)</h3>
-        </div>
-        <div id = foo>
-            <h2 style=color:red>*Discription:</h2>
-            My name is neel and i am from b.tech(cse). This page is reagarding 
-            my academic personal information.  
-        </div>
-        <img src="insta.jpg" alt="insta" width="150px">
-        <a href="https://instagram.com">click here</a>
-        <img src="git2.png" alt="git" width="150px">
-        <a href="https://github.com">click here</a>
-    </body>
-</html>
+  <head>
+      <title>My, webpage</title>
+      <link rel = stylesheet href = style.css></link>
+      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+  </head>
+  <body>
+      <h1 style="text-align: center;color: blue;">Welcome, To my webpage</h1>
+      <div id = foo>
+          <h3 class="baz">Name: Neel</h3>
+          <h3 class="baz">Roll.No.: 2001010005</h3>
+          <h3 class="baz">Course: B.Tech(CSE)</h3>   
+      </div>
+      <a href="https://instagram.com">
+        <img src="insta.jpg" alt="insta" class="rounded-circle" width="150px">
+      </a>
+      <a href="https://github.com">
+        <img src="git2.png" alt="github" class="rounded-circle" width="150px">
+      </a>
+  </body>
