--- a/index.html
+++ b/index.html
@@ -13,10 +13,24 @@
           <h3 class="baz">Roll.No.: 2001010005</h3>
           <h3 class="baz">Course: B.Tech(CSE)</h3>   
       </div>
-      <a href="https://instagram.com">
-        <img src="insta.jpg" alt="insta" class="rounded-circle" width="150px">
-      </a>
-      <a href="https://github.com">
-        <img src="git2.png" alt="github" class="rounded-circle" width="150px">
-      </a>
+      <div class="container">
+      <header>
+          <content>
+              *discription:
+              <p style="color: white;">My name is neel. I live in delhi and my course in B.tech(cse) program.
+                  Currently I am working on drone project with my team.
+              </p>
+          </content>
+      </header>
+      <footer>
+        <a href="https://instagram.com">
+          <img src="insta.jpg" alt="insta" class="rounded-circle" width="150px">
+        </a>
+        <a href="https://github.com">
+          <img src="git2.png" alt="github" class="rounded-circle" width="150px">
+        </a>
+        </footer>
+        <h5>Created BY: Neel</h5>
+        </div>
   </body>
+</html>
