--- a/index.html
+++ b/index.html
@@ -7,30 +7,39 @@
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
   </head>
   <body>
-      <h1 style="text-align: center;color: blue;">Welcome, To my webpage</h1>
-      <div id = foo>
-          <h3 class="baz">Name: Neel</h3>
-          <h3 class="baz">Roll.No.: 2001010005</h3>
-          <h3 class="baz">Course: B.Tech(CSE)</h3>   
-      </div>
-      <div class="container">
-      <header>
-          <content>
-              *discription:
-              <p style="color: white;">My name is neel. I live in delhi and my course in B.tech(cse) program.
-                  Currently I am working on drone project with my team.
-              </p>
-          </content>
-      </header>
-      <footer>
-        <a href="https://instagram.com">
-          <img src="insta.jpg" alt="insta" class="rounded-circle" width="150px">
-        </a>
-        <a href="https://github.com">
-          <img src="git2.png" alt="github" class="rounded-circle" width="150px">
-        </a>
-        </footer>
-        <h5>Created BY: Neel</h5>
-        </div>
+    <div>
+      <img src="krmu.jpg" alt="krmu" width="100px">
+      <img src="krmu2.jpg" alt="krmu" width="100px" style="float: right;" height="100px">
+      <h1 style="color: red; text-align: center;">Welcome, To my webpage!</h1>
+      <h3>Name: Neel</h3>
+      <h3>Roll.No.: 2001010005</h3>
+      <h3>Course: B.Tech(CSE)</h3>
+      <ul>
+        <li>
+        <p style="color: white;">*Discription:
+          My name is neel. I live in Delhi, my Course is B.tech(CSE) and currently
+          I am working on a project with my team.
+        </p>
+        </li>
+      </ul>
+    </div>
+    <div id = container>
+      <div>1. This is my personal space.</div>
+      <div>2. This is my personal space.</div>
+      <div>3. This is my personal space.</div>
+      <div>4. This is my personal space.</div>
+    </div>
+    <div class="baz">
+      <a href="https://instagram.com">
+      <img src="insta.jpg" class="img-circle" alt="insta" width="100px">
+      </a>
+      <a href="https://github.com">
+      <img src="git2.png" alt="github" width="100px" class="img-circle">
+    </a>
+    <footer>
+      <br>Created By: Neel</br>
+      Email: XYZ***gmail.com
+    </footer> 
+    </div>
   </body>
 </html>
