--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
       <h3>Course: B.Tech(CSE)</h3>
       <ul>
         <li>
-        <p style="color: white;">*Discription:
-          My name is neel. I live in Delhi, my Course is B.tech(CSE) and currently
-          I am working on a project with my team.
-        </p>
+          <p class="text-left">*Description
+            My name is neel and I live in delhi, my program is B.TECH(CSE). Currently I am woring 
+            on a project with my senior.
+          </p>
         </li>
       </ul>
     </div>
-    <div id = container>
-      <div>1. This is my personal space.</div>
-      <div>2. This is my personal space.</div>
-      <div>3. This is my personal space.</div>
-      <div>4. This is my personal space.</div>
-      <div>5. This is my personal space.</div>
+    <div class="d-flex flex-nowrap bd-highlight">
+      <div class="order-5 p-2 bd-highlight">1. This is my personal space. </div>
+      <div class="order-4 p-2 bd-highlight">2. This is my personal space. </div>
+      <div class="order-3 p-2 bd-highlight">3. This is my personal space.</div>
+      <div class="order-2 p-2 bd-highlight">4. This is my personal space. </div>
+      <div class="order-1 p-2 bd-highlight">5. This is my personal space.</div>
     </div>
     <div class="baz">
       <a href="https://instagram.com">
