--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
       <a href="https://github.com">
       <img src="git2.png" alt="github" width="100px" class="img-circle">
     </a>
+    <a class="btn btn-primary" href="https://facebook.com" role="button">facebook</a>
     <footer>
       <br>Created By: Neel</br>
       Email: XYZ***gmail.com
