--- a/index.html
+++ b/index.html
@@ -16,12 +16,15 @@
       <h3>Course: B.Tech(CSE)</h3>
       <ul>
         <li>
-          <p class="text-left">*Description
+          <p class="font-weight-normal">
             My name is neel and I live in delhi, my program is B.TECH(CSE). Currently I am woring 
             on a project with my senior.
           </p>
         </li>
       </ul>
+    </div>
+    <div class="alert alert-danger" role="alert">
+      Alert! Before going any further please remember that this is the admin personal place, any type of change could be consider as a punishable offence.
     </div>
     <div class="d-flex flex-nowrap bd-highlight">
       <div class="order-5 p-2 bd-highlight">5. This is my personal space. </div>
