--- a/index.html
+++ b/index.html
@@ -33,6 +33,22 @@
       <div class="order-2 p-2 bd-highlight">2. This is my personal space. </div>
       <div class="order-1 p-2 bd-highlight">1. This is my personal space.</div>
     </div>
+    <form>
+      <div class="form-group">
+        <label for="exampleInputEmail1">Email address</label>
+        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+      </div>
+      <div class="form-group">
+        <label for="exampleInputPassword1">Password</label>
+        <input type="password" class="form-control" id="exampleInputPassword1">
+      </div>
+      <div class="form-group form-check">
+        <input type="checkbox" class="form-check-input" id="exampleCheck1">
+        <label class="form-check-label" for="exampleCheck1">Check me out</label>
+      </div>
+      <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
     <div class="baz">
       <a href="https://instagram.com">
       <img src="insta.jpg" class="img-circle" alt="insta" width="100px">
