--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
       <h3>Course: B.Tech(CSE)</h3>
       <ul>
         <li>
-          <p class="font-weight-normal">
+          <p class="font-weight-bold">
+          <br>*Description</br>
             My name is neel and I live in delhi, my program is B.TECH(CSE). Currently I am woring 
             on a project with my senior.
           </p>
