--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div>
       <img src="krmu.jpg" alt="krmu" width="100px">
       <img src="krmu2.jpg" alt="krmu" width="100px" style="float: right;" height="100px">
-      <h1 style="color: red; text-align: center;">Welcome, To my webpage!</h1>
+      <h1 class="display-1">WELCOME, TO MY WEBPAGE</h1>
       <h3>Name: Neel</h3>
       <h3>Roll.No.: 2001010005</h3>
       <h3>Course: B.Tech(CSE)</h3>
