--- a/index.html
+++ b/index.html
@@ -4,25 +4,51 @@
       <title>My, webpage</title>
       <link rel = stylesheet href = style.css></link>
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+      <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
   </head>
   <body>
-    <div>
-      <img src="krmu.jpg" alt="krmu" width="100px">
-      <img src="krmu2.jpg" alt="krmu" width="100px" style="float: right;" height="100px">
-      <h1 class="display-1">WELCOME, TO MY WEBPAGE</h1>
-      <h3>Name: Neel</h3>
-      <h3>Roll.No.: 2001010005</h3>
-      <h3>Course: B.Tech(CSE)</h3>
-      <ul>
-        <li>
-          <p class="font-weight-bold">
-          <br>*Description</br>
-            My name is neel and I live in delhi, my program is B.TECH(CSE). Currently I am woring 
-            on a project with my senior.
-          </p>
-        </li>
-      </ul>
+    <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+        <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="krmu2.jpg" class="d-block w-100" alt="krmu" width="cover">
+          <div class="carousel-caption d-none d-md-block">
+            <h3>WELCOME</h3>
+            <p>TO my WEBPAGE!</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="gardern.jpg" class="d-block w-100" alt="code.jpg" width="cover">
+          <div class="carousel-caption d-none d-md-block">
+            <h3>NAME: NEEl</h3>
+            <h3>Roll.NO.: 2001010005</h3>
+            <h3>COURSE: B.TECh(CES)</h3>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="my.jpg" class="d-block w-100" alt="my.jpg" width="cover">
+          <div class="carousel-caption d-none d-md-block">
+            <h4>*DESCRIPTION</h4>
+            <p>My name is neel and I live Delhi. My course is B.TECH(CSE), currently I am working on a project 
+              with my senior.
+            </p>
+          </div>
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
     </div>
     <div class="alert alert-danger" role="alert">
       Alert! Before going any further please remember that this is the admin personal place, any type of change could be consider as a punishable offence.
@@ -52,12 +78,13 @@
     </form>
     <div class="baz">
       <a href="https://instagram.com">
-      <img src="insta.jpg" class="img-circle" alt="insta" width="100px">
+        <img src="insta.jpg" alt="Instagram" class="rounded-circle" width="100px">
       </a>
       <a href="https://github.com">
-      <img src="git2.png" alt="github" width="100px" class="img-circle">
+        <img src="git2.png" alt="Github" class="rounded-circle" width="100px">
     </a>
-    <a class="btn btn-primary" href="https://facebook.com" role="button">facebook</a>
+    <a button type="button" class="btn btn-outline-dark" href="https://facebook.com" role="button">Facebook</button>
+    </a>
     <footer>
       <br>Created By: Neel</br>
       Email: XYZ***gmail.com
