--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div id="sit">
-    <img src="krmu.jpg" alt="krmu" class="rounded-circle" width="150px">
+      <img src="krm.png" alt="krmu" class="rounded" width="200px">
     </div>
     <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
       <ol class="carousel-indicators">
